# ReceivablesIQ

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
app/: Home.py
app/pages/: 01_Executive_Overview.py  02_Collections_Priorities.py  03_Portfolio_Risk.py  04_Customer_Details.py  05_Data_Quality.py
app/utils/: config.py  db.py
config/: project_config.yaml
docs/: business_requirements.md  collections_methodology.md  dashboard_specification.md  dashboard_walkthrough.md  data_dictionary.md  data_model.md  data_model_phase2.md  data_model_phase3.md  deployment_guide.md  phase2_plan.md  phase3_plan.md  portfolio_case_study.md  risk_methodology.md  validation_framework.md
sql/: collections_priority.sql  create_schema.sql  customer_details.sql  customer_snapshot.sql  data_quality_summary.sql  executive_metrics.sql  portfolio_summary.sql
src/: config.py  db.py  io_duckdb.py  logging_setup.py  run_pipeline.py
src/generators/: __init__.py  claims.py  common.py  credit_decisions.py  customers.py  dates.py  defects.py  invoices.py  payments.py
tests/: test_collection_priorities.py  test_foundation.py  test_generators.py  test_metrics.py  test_pipeline.py  test_queries.py  test_risk_model.py  test_validations.py
